# prolink-scouting-app

./: .replit  README.md  account_users.db  app.py  player.db  pyproject.toml
static/: style.css
templates/: about.html  account_settings.html  career.html  contact.html  general.html  home.html  login.html  playerinformation.html  register.html  user_interface.html
