[tool.poetry]
name = "repl-nix-prolink-scouting-app"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_prolink_scouting_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
